# jupyter-cpp-kernel

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  INSTALL_ON_WINDOWS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql.yml
gcc-win/i686/: version_info.txt
gcc-win/i686/include/: bfd.h  libyasm-stdint.h
gcc-win/x86-64/: version_info.txt
gcc-win/x86-64/include/: libyasm-stdint.h
gcc-win/x86-64/lib/: libstdc++.dll.a-gdb.py
jcppkernel/: __init__.py  __main__.py  code_processing.py  external_header.py  realtime_subprocess.py  temp_file_processing.py
jcppkernel/resources/: gcpph.hpp  master.cpp
jcppkernel/resources/basicf/: dlfcn.h  mathdefs.hpp
jcppkernel/resources/cppio/: cppin.hpp  cppout.hpp
jupyter-cpp-kernel/: __main__.py  kernel.py
jupyter-cpp-kernel-03/: __main__.py
jupyter-cpp-kernel-03/kernel_spec/: kernel.json
jupyter-cpp-kernel-11/: __main__.py
jupyter-cpp-kernel-11/kernel_spec/: kernel.json
jupyter-cpp-kernel-14/: __main__.py
jupyter-cpp-kernel-14/kernel_spec/: kernel.json
jupyter-cpp-kernel-17/: __main__.py
jupyter-cpp-kernel-17/kernel_spec/: kernel.json
jupyter-cpp-kernel-20/: __main__.py
jupyter-cpp-kernel-20/kernel_spec/: kernel.json
jupyter-cpp-kernel-23/: __main__.py
jupyter-cpp-kernel-23/kernel_spec/: kernel.json
jupyter-cpp-kernel-98/: __main__.py
jupyter-cpp-kernel-98/kernel_spec/: kernel.json
jupyter-cpp-kernel/resources/: gcpph.hpp  master.cpp  qiskit.cpp
jupyter-cpp-kernel/resources/basicf/: dlfcn.h  json.hpp  mathdefs.hpp  rstdio.h  timer.hpp
jupyter-cpp-kernel/resources/cppio/: cppin.hpp  cppout.hpp
jupyter-cpp-kernel/resources/display/: encrypt.hpp  jdisplay.hpp
jupyter-cpp-kernel/resources/gzip/: compress.hpp  zconf.h  (+5 more)
jupyter_c_kernel/: kernel.py
jupyter_cpp_kernel/: install_cpp_kernel  kernel.py
jupyter_cpp_kernel/resources/: gcpph.hpp  master.cpp  std_io_remap.h  stdio_remap.h  test.cpp
kernel_spec/: kernel.json
kernel_spec/cpp03/: kernel.json
kernel_spec/cpp11/: kernel.json
kernel_spec/cpp14/: kernel.json
kernel_spec/cpp17/: kernel.json
kernel_spec/cpp20/: kernel.json
notebook_guides/: Getting started.ipynb
notebook_guides/I. The basics/: 1. Hello World.ipynb  2. Variables and types.ipynb  3. Constants.ipynb  4. Operators.ipynb  5. Input & Output.ipynb
share/cpp_header/: check_cpp.hpp
(+237 files in other folders)
