[tool.poetry]
name = "jupyter-cpp-kernel"
version = "1.0.0a8"
description = "C++ kernel for Jupyter. Easily adopt and deploy for testing environment."
authors = ["Shiroi Neko <shiroineko.tfs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"
