[metadata]
description-file = README.md
name = jupyter-cpp-kernel
version = 1.0.0a6
author = shiroinekotfs (ft. Brendan Rius)
author_email = shiroineko.tfs@gmail.com
description = C++ kernel for Jupyter. Easily adopt and deploy for testing environment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shiroinekotfs/jupyter-cpp-kernel
project_urls =
    Bug Tracker = https://github.com/shiroinekotfs/jupyter-cpp-kernel/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.8
